# hub

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
config/: config.yaml
docs/: architecture.md  decisions.md
prompts/: blog_post_generation.md
scripts/: archive-and-push.sh
src/hub/: cli.py
src/hub/adapters/: __init__.py  base.py  git_adapter.py  telegram_adapter.py  wordpress_adapter.py
src/hub/core/: __init__.py  bus.py  config.py  logger.py  registry.py
src/hub/services/: claude_service.py  markdown_service.py
src/hub/workflows/: blog_publish.py  draft_post.py  remote_control.py
tests/unit/adapters/: test_git_adapter.py  test_telegram_adapter.py
tests/unit/core/: test_bus.py
tests/unit/services/: test_claude_service.py
tests/unit/workflows/: test_blog_publish.py  test_draft_post.py  test_remote_control.py
