[project]
name = "hub"
version = "0.1.0"
description = "개인 자동화 허브 — Git/WordPress/Telegram 어댑터와 Claude API 서비스를 이벤트 버스로 통합"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.30",
    "python-telegram-bot>=21.0",
    "gitpython>=3.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "structlog>=24.0",
]

[project.scripts]
hub = "hub.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: 외부 서비스와 실제 연결하는 통합 테스트 (deselect: '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
